--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "marreta",
+  "name": "M.a.r.r.e.t.a.",
   "version": "0.0.1",
   "description": "",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
+  "build": {
+    "appId": "777",
+    "mac": {
+      "category": "fon"
+    }
+  },
+  "postinstall": "electron-builder install-app-deps",
   "author": "Katreque",
   "github": "https://github.com/Katreque/marreta.git",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.1.1",
-    "electron": "^2.0.0",
+    "child_process": "^1.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3"
+  },
+  "devDependencies": {
+    "electron": "^2.0.0",
+    "electron-builder": "^20.11.1"
   }
 }
