--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "M.a.r.r.e.t.a.",
+  "name": "M.A.R.R.E.T.A.E.",
   "version": "0.0.1",
   "description": "",
   "main": "main.js",
@@ -11,6 +11,13 @@
   },
   "build": {
     "appId": "777",
+    "files": [
+      "**/*"
+    ],
+    "extraFiles": [
+      "dllEnder.bat",
+      "openChromeExtension.bat"
+    ],
     "mac": {
       "category": "fon"
     }
@@ -24,7 +31,8 @@
     "child_process": "^1.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "electron": "^2.0.0",
